@@ -19,10 +19,14 @@ package io.parsingdata.metal;
 import static java.math.BigInteger.ONE;
 import static java.math.BigInteger.TEN;
 import static java.math.BigInteger.ZERO;
+import static java.util.Spliterators.spliteratorUnknownSize;
+import static java.util.function.Predicate.not;
+import static java.util.stream.Collectors.toList;
+import static java.util.stream.Collectors.toSet;
 
-import static org.junit.Assert.assertEquals;
-import static org.junit.Assert.assertFalse;
-import static org.junit.Assert.assertNotEquals;
+import static org.junit.jupiter.api.Assertions.assertEquals;
+import static org.junit.jupiter.api.Assertions.assertFalse;
+import static org.junit.jupiter.api.Assertions.assertNotEquals;
 
 import static io.parsingdata.metal.Shorthand.TRUE;
 import static io.parsingdata.metal.Shorthand.con;
@@ -37,35 +41,47 @@ import static io.parsingdata.metal.util.EncodingFactory.enc;
 import static io.parsingdata.metal.util.EncodingFactory.signed;
 import static io.parsingdata.metal.util.TokenDefinitions.any;
 
+import java.io.BufferedReader;
+import java.io.IOException;
+import java.io.InputStreamReader;
+import java.io.UncheckedIOException;
 import java.lang.reflect.Constructor;
 import java.lang.reflect.InvocationTargetException;
+import java.lang.reflect.Modifier;
 import java.math.BigInteger;
+import java.net.URL;
 import java.nio.charset.Charset;
 import java.util.ArrayList;
-import java.util.Arrays;
 import java.util.Collection;
 import java.util.HashMap;
+import java.util.Iterator;
 import java.util.List;
 import java.util.Map;
+import java.util.Set;
+import java.util.Spliterator;
 import java.util.function.BinaryOperator;
 import java.util.function.Supplier;
+import java.util.stream.Stream;
+import java.util.stream.StreamSupport;
 
-import org.junit.Test;
-import org.junit.runner.RunWith;
-import org.junit.runners.Parameterized;
-import org.junit.runners.Parameterized.Parameter;
+import org.junit.jupiter.params.ParameterizedTest;
+import org.junit.jupiter.params.provider.Arguments;
+import org.junit.jupiter.params.provider.MethodSource;
 
 import io.parsingdata.metal.data.ByteStream;
 import io.parsingdata.metal.data.ByteStreamSource;
 import io.parsingdata.metal.data.ConcatenatedValueSource;
 import io.parsingdata.metal.data.ConstantSource;
 import io.parsingdata.metal.data.DataExpressionSource;
+import io.parsingdata.metal.data.Environment;
 import io.parsingdata.metal.data.ImmutableList;
+import io.parsingdata.metal.data.ImmutablePair;
 import io.parsingdata.metal.data.ParseGraph;
 import io.parsingdata.metal.data.ParseItem;
 import io.parsingdata.metal.data.ParseReference;
 import io.parsingdata.metal.data.ParseState;
 import io.parsingdata.metal.data.ParseValue;
+import io.parsingdata.metal.data.Selection;
 import io.parsingdata.metal.data.Slice;
 import io.parsingdata.metal.data.Source;
 import io.parsingdata.metal.encoding.Encoding;
@@ -87,6 +103,8 @@ import io.parsingdata.metal.expression.value.Expand;
 import io.parsingdata.metal.expression.value.FoldCat;
 import io.parsingdata.metal.expression.value.FoldLeft;
 import io.parsingdata.metal.expression.value.FoldRight;
+import io.parsingdata.metal.expression.value.Join;
+import io.parsingdata.metal.expression.value.NotAValue;
 import io.parsingdata.metal.expression.value.Reverse;
 import io.parsingdata.metal.expression.value.SingleValueExpression;
 import io.parsingdata.metal.expression.value.Value;
@@ -109,8 +127,11 @@ import io.parsingdata.metal.expression.value.reference.Last;
 import io.parsingdata.metal.expression.value.reference.Len;
 import io.parsingdata.metal.expression.value.reference.Nth;
 import io.parsingdata.metal.expression.value.reference.Offset;
+import io.parsingdata.metal.expression.value.reference.Ref;
+import io.parsingdata.metal.expression.value.reference.Self;
 import io.parsingdata.metal.token.Cho;
 import io.parsingdata.metal.token.Def;
+import io.parsingdata.metal.token.DefUntil;
 import io.parsingdata.metal.token.Post;
 import io.parsingdata.metal.token.Pre;
 import io.parsingdata.metal.token.Rep;
@@ -120,18 +141,46 @@ import io.parsingdata.metal.token.Sub;
 import io.parsingdata.metal.token.Tie;
 import io.parsingdata.metal.token.Token;
 import io.parsingdata.metal.token.TokenRef;
-import io.parsingdata.metal.token.DefUntil;
 import io.parsingdata.metal.token.While;
 import io.parsingdata.metal.util.EncodingFactory;
 import io.parsingdata.metal.util.InMemoryByteStream;
 
 @SuppressWarnings("PMD.EqualsNull") // Suppressed because this class explicitly checks for correct equals(null) behaviour.
-@RunWith(Parameterized.class)
 public class AutoEqualityTest {
 
-    @Parameter public Object object;
-    @Parameter(1) public Object same;
-    @Parameter(2) public Object[] other;
+    private static final Set<Class<?>> CLASSES_TO_TEST = Set.of(
+        // Tokens
+        Cho.class, Def.class, Pre.class, Rep.class, RepN.class, Seq.class, Sub.class, Tie.class,
+        TokenRef.class, While.class, Post.class, DefUntil.class,
+        // ValueExpressions
+        Len.class, Offset.class, Neg.class, Not.class, Count.class, First.class, Last.class, Reverse.class,
+        And.class, Or.class, ShiftLeft.class, ShiftRight.class, Add.class, Div.class, Mod.class, Mul.class,
+        io.parsingdata.metal.expression.value.arithmetic.Sub.class, Cat.class, Nth.class, Elvis.class,
+        FoldLeft.class, FoldRight.class, Const.class, Expand.class, Bytes.class, CurrentOffset.class,
+        FoldCat.class, CurrentIteration.class,
+        Join.class, Self.class, Ref.NameRef.class, Ref.DefinitionRef.class,
+        // Expressions
+        Eq.class, EqNum.class, EqStr.class, GtEqNum.class, GtNum.class, LtEqNum.class, LtNum.class,
+        io.parsingdata.metal.expression.logical.And.class, io.parsingdata.metal.expression.logical.Or.class,
+        io.parsingdata.metal.expression.logical.Not.class,
+        // Data structures
+        CoreValue.class, ParseValue.class, ParseReference.class, ParseState.class,
+        NotAValue.class, ParseGraph.class, ImmutableList.class,
+        // Inputs
+        Slice.class,
+        ConstantSource.class, DataExpressionSource.class, ByteStreamSource.class, ConcatenatedValueSource.class
+    );
+
+    private static final Set<Class<?>> CLASSES_TO_IGNORE = Set.of(
+        // Handled indirectly through DefinitionRef and NameRef.
+        Ref.class,
+        // Handled in EqualityTest manually.
+        ImmutablePair.class,
+        // Utility classes.
+        Selection.class, ConstantFactory.class,
+        // Multiple constructors
+        Environment.class
+    );
 
     public static final Object OTHER_TYPE = new Object() {};
 
@@ -145,37 +194,41 @@ public class AutoEqualityTest {
     private static final ParseGraph BRANCHED_GRAPH = createFromByteStream(DUMMY_STREAM).addBranch(any("a")).order;
     private static final ParseGraph CLOSED_BRANCHED_GRAPH = createFromByteStream(DUMMY_STREAM).addBranch(any("a")).closeBranch(any("a")).order;
 
-    private static final List<Supplier<Object>> STRINGS = Arrays.asList(() -> "a", () -> "b");
-    private static final List<Supplier<Object>> ENCODINGS = Arrays.asList(EncodingFactory::enc, EncodingFactory::signed, EncodingFactory::le, () -> new Encoding(Charset.forName("UTF-8")));
-    private static final List<Supplier<Object>> TOKENS = Arrays.asList(() -> any("a"), () -> any("b"));
-    private static final List<Supplier<Object>> TOKEN_ARRAYS = Arrays.asList(() -> new Token[] { any("a"), any("b")}, () -> new Token[] { any("b"), any("c") }, () -> new Token[] { any("a"), any("b"), any("c") });
-    private static final List<Supplier<Object>> SINGLE_VALUE_EXPRESSIONS = Arrays.asList(() -> con(1), () -> con(2));
-    private static final List<Supplier<Object>> VALUE_EXPRESSIONS = Arrays.asList(() -> con(1), () -> exp(con(1), con(2)));
-    private static final List<Supplier<Object>> EXPRESSIONS = Arrays.asList(() -> TRUE, () -> not(TRUE));
-    private static final List<Supplier<Object>> VALUES = Arrays.asList(() -> ConstantFactory.createFromString("a", enc()), () -> ConstantFactory.createFromString("b", enc()), () -> ConstantFactory.createFromNumeric(1L, signed()), () -> NOT_A_VALUE);
-    private static final List<Supplier<Object>> REDUCERS = Arrays.asList(() -> (BinaryOperator<ValueExpression>) Shorthand::cat, () -> (BinaryOperator<ValueExpression>) Shorthand::div);
-    private static final List<Supplier<Object>> SLICES = Arrays.asList(() -> createFromBytes(new byte[] { 1, 2 }), () -> Slice.createFromSource(new DataExpressionSource(ref("a"), 1, createFromByteStream(DUMMY_STREAM).add(PARSE_VALUE).add(PARSE_VALUE), enc()), ZERO, BigInteger.valueOf(2)).get());
-    private static final List<Supplier<Object>> BYTE_ARRAYS = Arrays.asList(() -> new byte[] { 0 }, () -> new byte[] { 1, 2 }, () -> new byte[] {});
-    private static final List<Supplier<Object>> SOURCES = Arrays.asList(() -> new ConstantSource(new byte[] {}), () -> new DataExpressionSource(ref("x"), 8, createFromByteStream(DUMMY_STREAM).add(PARSE_VALUE), signed()));
-    private static final List<Supplier<Object>> LONGS = Arrays.asList(() -> 0L, () -> 1L, () -> 31L, () -> 100000L);
-    private static final List<Supplier<Object>> INTEGERS = Arrays.asList(() -> 0, () -> 1, () -> 17, () -> 21212121);
-    private static final List<Supplier<Object>> PARSE_GRAPHS = Arrays.asList(() -> ParseGraph.EMPTY, () -> GRAPH_WITH_REFERENCE);
-    private static final List<Supplier<Object>> PARSE_ITEMS = Arrays.asList(() -> CLOSED_BRANCHED_GRAPH, () -> ParseGraph.EMPTY, () -> GRAPH_WITH_REFERENCE, () -> createFromByteStream(DUMMY_STREAM).add(PARSE_VALUE).order, () -> createFromByteStream(DUMMY_STREAM).add(PARSE_VALUE).add(PARSE_VALUE).order, () -> BRANCHED_GRAPH);
-    private static final List<Supplier<Object>> BYTE_STREAMS = Arrays.asList(() -> new InMemoryByteStream(new byte[] { 1, 2 }), () -> DUMMY_STREAM);
-    private static final List<Supplier<Object>> BIG_INTEGERS = Arrays.asList(() -> ONE, () -> BigInteger.valueOf(3));
-    private static final List<Supplier<Object>> PARSE_STATES = Arrays.asList(() -> createFromByteStream(DUMMY_STREAM), () -> createFromByteStream(DUMMY_STREAM, ONE), () -> new ParseState(GRAPH_WITH_REFERENCE, DUMMY_BYTE_STREAM_SOURCE, TEN, new ImmutableList<>(), new ImmutableList<>(), 0));
-    private static final List<Supplier<Object>> IMMUTABLE_LISTS = Arrays.asList(ImmutableList::new, () -> ImmutableList.create("TEST"), () -> ImmutableList.create(1), () -> ImmutableList.create(1).add(2));
-    private static final List<Supplier<Object>> BOOLEANS = Arrays.asList(() -> true, () -> false);
-    private static final Map<Class, List<Supplier<Object>>> mapping = buildMap();
+    private static final List<Supplier<Object>> STRINGS = List.of(() -> "a", () -> "b");
+    private static final List<Supplier<Object>> STRING_ARRAYS = List.of(() -> new String[] {"a"}, () -> new String[] {"b"}, () -> new String[] {"a", "b"}, () -> new String[] {"b", "c"}, () -> new String[] {"a", "b", "c"});
+    private static final List<Supplier<Object>> ENCODINGS = List.of(EncodingFactory::enc, EncodingFactory::signed, EncodingFactory::le, () -> new Encoding(Charset.forName("UTF-8")));
+    private static final List<Supplier<Object>> TOKENS = List.of(() -> any("a"), () -> any("b"));
+    private static final List<Supplier<Object>> TOKEN_ARRAYS = List.of(() -> new Token[] { any("a"), any("b")}, () -> new Token[] { any("b"), any("c") }, () -> new Token[] { any("a"), any("b"), any("c") });
+    private static final List<Supplier<Object>> SINGLE_VALUE_EXPRESSIONS = List.of(() -> con(1), () -> con(2));
+    private static final List<Supplier<Object>> VALUE_EXPRESSIONS = List.of(() -> con(1), () -> exp(con(1), con(2)));
+    private static final List<Supplier<Object>> VALUE_EXPRESSION_ARRAY = List.of(() -> new ValueExpression[] { con(1), exp(con(1), con(2))}, () -> new ValueExpression[] { exp(con(1), con(2)), con(1)}, () -> new ValueExpression[] { exp(con(1), con(2)), exp(con(1), con(3))});
+    private static final List<Supplier<Object>> EXPRESSIONS = List.of(() -> TRUE, () -> not(TRUE));
+    private static final List<Supplier<Object>> VALUES = List.of(() -> ConstantFactory.createFromString("a", enc()), () -> ConstantFactory.createFromString("b", enc()), () -> ConstantFactory.createFromNumeric(1L, signed()), () -> NOT_A_VALUE);
+    private static final List<Supplier<Object>> REDUCERS = List.of(() -> (BinaryOperator<ValueExpression>) Shorthand::cat, () -> (BinaryOperator<ValueExpression>) Shorthand::div);
+    private static final List<Supplier<Object>> SLICES = List.of(() -> createFromBytes(new byte[] { 1, 2 }), () -> Slice.createFromSource(new DataExpressionSource(ref("a"), 1, createFromByteStream(DUMMY_STREAM).add(PARSE_VALUE).add(PARSE_VALUE), enc()), ZERO, BigInteger.valueOf(2)).get());
+    private static final List<Supplier<Object>> BYTE_ARRAYS = List.of(() -> new byte[] { 0 }, () -> new byte[] { 1, 2 }, () -> new byte[] {});
+    private static final List<Supplier<Object>> SOURCES = List.of(() -> new ConstantSource(new byte[] {}), () -> new DataExpressionSource(ref("x"), 8, createFromByteStream(DUMMY_STREAM).add(PARSE_VALUE), signed()));
+    private static final List<Supplier<Object>> LONGS = List.of(() -> 0L, () -> 1L, () -> 31L, () -> 100000L);
+    private static final List<Supplier<Object>> INTEGERS = List.of(() -> 0, () -> 1, () -> 17, () -> 21212121);
+    private static final List<Supplier<Object>> PARSE_GRAPHS = List.of(() -> ParseGraph.EMPTY, () -> GRAPH_WITH_REFERENCE);
+    private static final List<Supplier<Object>> PARSE_ITEMS = List.of(() -> CLOSED_BRANCHED_GRAPH, () -> ParseGraph.EMPTY, () -> GRAPH_WITH_REFERENCE, () -> createFromByteStream(DUMMY_STREAM).add(PARSE_VALUE).order, () -> createFromByteStream(DUMMY_STREAM).add(PARSE_VALUE).add(PARSE_VALUE).order, () -> BRANCHED_GRAPH);
+    private static final List<Supplier<Object>> BYTE_STREAMS = List.of(() -> new InMemoryByteStream(new byte[] { 1, 2 }), () -> DUMMY_STREAM);
+    private static final List<Supplier<Object>> BIG_INTEGERS = List.of(() -> ONE, () -> BigInteger.valueOf(3));
+    private static final List<Supplier<Object>> PARSE_STATES = List.of(() -> createFromByteStream(DUMMY_STREAM), () -> createFromByteStream(DUMMY_STREAM, ONE), () -> new ParseState(GRAPH_WITH_REFERENCE, DUMMY_BYTE_STREAM_SOURCE, TEN, new ImmutableList<>(), new ImmutableList<>()));
+    private static final List<Supplier<Object>> IMMUTABLE_LISTS = List.of(ImmutableList::new, () -> ImmutableList.create("TEST"), () -> ImmutableList.create(1), () -> ImmutableList.create(1).add(2));
+    private static final List<Supplier<Object>> BOOLEANS = List.of(() -> true, () -> false);
+    private static final Map<Class<?>, List<Supplier<Object>>> mapping = buildMap();
 
-    private static Map<Class, List<Supplier<Object>>> buildMap() {
-        final Map<Class, List<Supplier<Object>>> result = new HashMap<>();
+    private static Map<Class<?>, List<Supplier<Object>>> buildMap() {
+        final Map<Class<?>, List<Supplier<Object>>> result = new HashMap<>();
         result.put(String.class, STRINGS);
+        result.put(String[].class, STRING_ARRAYS);
         result.put(Encoding.class, ENCODINGS);
         result.put(Token.class, TOKENS);
         result.put(Token[].class, TOKEN_ARRAYS);
         result.put(SingleValueExpression.class, SINGLE_VALUE_EXPRESSIONS);
         result.put(ValueExpression.class, VALUE_EXPRESSIONS);
+        result.put(ValueExpression[].class, VALUE_EXPRESSION_ARRAY);
         result.put(Expression.class, EXPRESSIONS);
         result.put(Value.class, VALUES);
         result.put(BinaryOperator.class, REDUCERS);
@@ -194,42 +247,75 @@ public class AutoEqualityTest {
         return result;
     }
 
-    @Parameterized.Parameters(name="{0}")
-    public static Collection<Object[]> data() throws IllegalAccessException, InvocationTargetException, InstantiationException {
-        return generateObjectArrays(
-            // Tokens
-            Cho.class, Def.class, Pre.class, Rep.class, RepN.class, Seq.class, Sub.class, Tie.class,
-            TokenRef.class, While.class, Post.class, DefUntil.class,
-            // ValueExpressions
-            Len.class, Offset.class, Neg.class, Not.class, Count.class, First.class, Last.class, Reverse.class,
-            And.class, Or.class, ShiftLeft.class, ShiftRight.class, Add.class, Div.class, Mod.class, Mul.class,
-            io.parsingdata.metal.expression.value.arithmetic.Sub.class, Cat.class, Nth.class, Elvis.class,
-            FoldLeft.class, FoldRight.class, Const.class, Expand.class, Bytes.class, CurrentOffset.class,
-            FoldCat.class, CurrentIteration.class,
-            // Expressions
-            Eq.class, EqNum.class, EqStr.class, GtEqNum.class, GtNum.class, LtEqNum.class, LtNum.class,
-            io.parsingdata.metal.expression.logical.And.class, io.parsingdata.metal.expression.logical.Or.class,
-            io.parsingdata.metal.expression.logical.Not.class,
-            // Data structures
-            CoreValue.class, ParseValue.class, ParseReference.class, ParseState.class,
-            // Inputs
-            ConstantSource.class, DataExpressionSource.class, ByteStreamSource.class, ConcatenatedValueSource.class
-            );
+    public static Stream<Arguments> data() throws IllegalAccessException, InvocationTargetException, InstantiationException {
+        final Set<Class<?>> classes = findClasses().filter(not(CLASSES_TO_IGNORE::contains)).collect(toSet());
+        classes.removeAll(CLASSES_TO_TEST);
+        assertEquals(Set.of(), classes, "Please add missing class to the CLASSES_TO_TEST or CLASSES_TO_IGNORE constant.");
+        return generateObjectArrays(CLASSES_TO_TEST).stream();
     }
 
-    private static Collection<Object[]> generateObjectArrays(Class... classes) throws IllegalAccessException, InstantiationException, InvocationTargetException {
-        Collection<Object[]> results = new ArrayList<>();
-        for (Class c : classes) {
+    private static Stream<Class<?>> findClasses() {
+        return Stream.of("io.parsingdata.metal.data",
+                "io.parsingdata.metal.expression.comparison",
+                "io.parsingdata.metal.expression.logical",
+                "io.parsingdata.metal.expression.value",
+                "io.parsingdata.metal.expression.value.arithmetic",
+                "io.parsingdata.metal.expression.value.bitwise",
+                "io.parsingdata.metal.expression.value.reference",
+                "io.parsingdata.metal.token")
+            .flatMap(AutoEqualityTest::findAllClassesUsingClassLoader)
+            .filter(c -> Modifier.isPublic(c.getModifiers()))
+            .filter(c -> !Modifier.isAbstract(c.getModifiers()));
+    }
+
+    public static Stream<Class<?>> findAllClassesUsingClassLoader(final String packageName) {
+        try {
+            final Iterator<URL> iterator = ClassLoader.getSystemClassLoader()
+                .getResources(packageName.replaceAll("[.]", "/")).asIterator();
+            return StreamSupport.stream(spliteratorUnknownSize(iterator, Spliterator.DISTINCT), false)
+                .filter(u -> u.getPath().contains("/classes/")) // ignore test classes
+                .flatMap(url -> getClasses(packageName, url));
+        } catch (IOException e) {
+            throw new UncheckedIOException(e);
+        }
+    }
+
+    private static Stream<? extends Class<?>> getClasses(final String packageName, final URL url) {
+        try (BufferedReader reader = new BufferedReader(new InputStreamReader(url.openStream()))) {
+            return reader.lines()
+                .filter(line -> line.endsWith(".class"))
+                .map(className -> packageName + "." + className.substring(0, className.lastIndexOf('.')))
+                .map(AutoEqualityTest::getClass)
+                .collect(toList()).stream();
+        } catch (IOException e) {
+            throw new UncheckedIOException(e);
+        }
+    }
+
+    private static Class<?> getClass(final String className) {
+        try {
+            return Class.forName(className);
+        } catch (ClassNotFoundException e) {
+            throw new IllegalStateException("Unable to find class for name " + className, e);
+        }
+    }
+
+    private static Collection<Arguments> generateObjectArrays(final Set<Class<?>> classes) throws IllegalAccessException, InstantiationException, InvocationTargetException {
+        Collection<Arguments> results = new ArrayList<>();
+        for (Class<?> c : classes) {
             results.add(generateObjectArrays(c));
         }
         return results;
     }
 
-    private static Object[] generateObjectArrays(Class c) throws IllegalAccessException, InvocationTargetException, InstantiationException {
-        Constructor cons = c.getDeclaredConstructors()[0];
+    private static Arguments generateObjectArrays(final Class<?> c) throws IllegalAccessException, InvocationTargetException, InstantiationException {
+        Constructor<?> cons = c.getDeclaredConstructors()[0];
         cons.setAccessible(true);
         List<List<Supplier<Object>>> args = new ArrayList<>();
-        for (Class cl : cons.getParameterTypes()) {
+        for (Class<?> cl : cons.getParameterTypes()) {
+            if (!mapping.containsKey(cl)) {
+                throw new AssertionError("Please add a mapping for type " + cl.getSimpleName());
+            }
             args.add(mapping.get(cl));
         }
         List<List<Supplier<Object>>> argLists = generateCombinations(0, args);
@@ -237,14 +323,14 @@ public class AutoEqualityTest {
         for (List<Supplier<Object>> argList : argLists.subList(1, argLists.size())) {
             otherInstances.add(cons.newInstance(instantiate(argList).toArray()));
         }
-        return new Object[]{
+        return Arguments.arguments(
             cons.newInstance(instantiate(argLists.get(0)).toArray()),
             cons.newInstance(instantiate(argLists.get(0)).toArray()),
             otherInstances.toArray()
-        };
+        );
     }
 
-    private static List<List<Supplier<Object>>> generateCombinations(int index, List<List<Supplier<Object>>> args) {
+    private static List<List<Supplier<Object>>> generateCombinations(final int index, final List<List<Supplier<Object>>> args) {
         List<List<Supplier<Object>>> result = new ArrayList<>();
         if (index == args.size()) {
             result.add(new ArrayList<>());
@@ -267,8 +353,9 @@ public class AutoEqualityTest {
         return output;
     }
 
-    @Test
-    public void notEqualsNull() {
+    @ParameterizedTest
+    @MethodSource("data")
+    public void notEqualsNull(final Object object, final Object same, final Object[] other) {
         assertFalse(object.equals(null));
         assertFalse(other.equals(null));
         for (Object o : other) {
@@ -276,8 +363,9 @@ public class AutoEqualityTest {
         }
     }
 
-    @Test
-    public void equalsItselfIdentity() {
+    @ParameterizedTest
+    @MethodSource("data")
+    public void equalsItselfIdentity(final Object object, final Object same, final Object[] other) {
         assertEquals(object, object);
         assertEquals(same, same);
         for (Object o : other) {
@@ -285,14 +373,16 @@ public class AutoEqualityTest {
         }
     }
 
-    @Test
-    public void equalsItself() {
+    @ParameterizedTest
+    @MethodSource("data")
+    public void equalsItself(final Object object, final Object same, final Object[] other) {
         assertEquals(object, same);
         assertEquals(same, object);
     }
 
-    @Test
-    public void notEquals() {
+    @ParameterizedTest
+    @MethodSource("data")
+    public void notEquals(final Object object, final Object same, final Object[] other) {
         for (Object o : other) {
             assertNotEquals(o, object);
             assertNotEquals(object, o);
@@ -301,8 +391,9 @@ public class AutoEqualityTest {
         }
     }
 
-    @Test
-    public void notEqualsType() {
+    @ParameterizedTest
+    @MethodSource("data")
+    public void notEqualsType(final Object object, final Object same, final Object[] other) {
         assertNotEquals(object, OTHER_TYPE);
         assertNotEquals(OTHER_TYPE, object);
         assertNotEquals(other, OTHER_TYPE);
@@ -313,8 +404,9 @@ public class AutoEqualityTest {
         }
     }
 
-    @Test
-    public void basicNoHashCollisions() {
+    @ParameterizedTest
+    @MethodSource("data")
+    public void basicNoHashCollisions(final Object object, final Object same, final Object[] other) {
         assertEquals(object.hashCode(), object.hashCode());
         assertEquals(same.hashCode(), same.hashCode());
         assertEquals(object.hashCode(), same.hashCode());
