@@ -29,19 +29,17 @@ import static io.parsingdata.metal.Shorthand.shr;
 import static io.parsingdata.metal.util.EncodingFactory.enc;
 import static io.parsingdata.metal.util.ParseStateFactory.stream;
 
-import java.util.Arrays;
 import java.util.Collection;
-
-import org.junit.runners.Parameterized.Parameters;
+import java.util.List;
 
 import io.parsingdata.metal.token.Token;
 import io.parsingdata.metal.util.ParameterizedParse;
 
 public class BitwiseValueExpressionSemanticsTest extends ParameterizedParse {
 
-    @Parameters(name = "{0} ({4})")
-    public static Collection<Object[]> data() {
-        return Arrays.asList(new Object[][] {
+    @Override
+    public Collection<Object[]> data() {
+        return List.of(new Object[][] {
             { "[170, 85] a, not(a)", simpleNot(1), stream(170, 85), enc(), true },
             { "[0, 255] a not(a)", simpleNot(1), stream(0, 255), enc(), true },
             { "[255, 0] a not(a)", simpleNot(1), stream(255, 0), enc(), true },
