@@ -16,14 +16,13 @@
 
 package io.parsingdata.metal;
 
-import static io.parsingdata.metal.data.Selection.NO_LIMIT;
 import static java.math.BigInteger.ONE;
 import static java.math.BigInteger.ZERO;
 
-import static org.junit.Assert.assertEquals;
-import static org.junit.Assert.assertFalse;
-import static org.junit.Assert.assertNotEquals;
-import static org.junit.Assert.assertTrue;
+import static org.junit.jupiter.api.Assertions.assertEquals;
+import static org.junit.jupiter.api.Assertions.assertFalse;
+import static org.junit.jupiter.api.Assertions.assertNotEquals;
+import static org.junit.jupiter.api.Assertions.assertTrue;
 
 import static io.parsingdata.metal.AutoEqualityTest.DUMMY_STREAM;
 import static io.parsingdata.metal.Shorthand.con;
@@ -49,11 +48,10 @@ import static io.parsingdata.metal.util.TokenDefinitions.any;
 
 import java.math.BigInteger;
 import java.nio.charset.Charset;
-import java.util.Arrays;
 import java.util.List;
 import java.util.Optional;
 
-import org.junit.Test;
+import org.junit.jupiter.api.Test;
 
 import io.parsingdata.metal.data.ConstantSource;
 import io.parsingdata.metal.data.ImmutableList;
@@ -126,8 +124,7 @@ public class EqualityTest {
         assertEquals(same, same);
         assertEquals(object, same);
         assertEquals(same, object);
-        assertNotEquals(object, new Object() {
-        });
+        assertNotEquals(object, new Object() {});
         assertEquals(object.hashCode(), same.hashCode());
     }
 
@@ -135,7 +132,7 @@ public class EqualityTest {
     public void multiConstructorTypes() {
         final Encoding object = enc();
         final Encoding same = new Encoding(Encoding.DEFAULT_SIGN, Encoding.DEFAULT_CHARSET, Encoding.DEFAULT_BYTE_ORDER);
-        final List<Encoding> other = Arrays.asList(signed(), le(), new Encoding(Charset.forName("UTF-8")));
+        final List<Encoding> other = List.of(signed(), le(), new Encoding(Charset.forName("UTF-8")));
         assertFalse(object.equals(null));
         assertFalse(same.equals(null));
         assertEquals(object, same);
@@ -199,25 +196,29 @@ public class EqualityTest {
     @Test
     public void stringRef() {
         final Ref<String> object = new NameRef("name");
-        assertFalse(object.equals(null));
+        assertNotEquals(null, object);
         assertNotEquals("name", object);
         assertEquals(object, new NameRef("name"));
+        assertNotEquals(object, new NameRef("name", "name"));
+        assertNotEquals(object, new NameRef("name", "otherName"));
         assertNotEquals(object, new NameRef("otherName"));
         assertNotEquals(object, new DefinitionRef(any("name")));
-        assertNotEquals(object, new NameRef("name", con(1)));
-        assertNotEquals(object, new NameRef("name", null, con(1)));
+        assertNotEquals(object, new NameRef(con(1), "name"));
+        assertNotEquals(object, new NameRef(con(1), null, "name"));
     }
 
     @Test
     public void definitionRef() {
         final Ref<Token> object = new DefinitionRef(any("name"));
-        assertFalse(object.equals(null));
+        assertNotEquals(null, object);
         assertNotEquals("name", object);
         assertEquals(object, new DefinitionRef(any("name")));
+        assertNotEquals(object, new DefinitionRef(any("name"), any("name")));
+        assertNotEquals(object, new DefinitionRef(any("name"), any("otherName")));
         assertNotEquals(object, new DefinitionRef(any("otherName")));
         assertNotEquals(object, new NameRef("name"));
-        assertNotEquals(object, new DefinitionRef(any("name"), con(1)));
-        assertNotEquals(object, new DefinitionRef(any("name"), null, con(1)));
+        assertNotEquals(object, new DefinitionRef(con(1), any("name")));
+        assertNotEquals(object, new DefinitionRef(con(1), null, any("name")));
     }
 
     @Test
