@@ -16,46 +16,40 @@
 
 package io.parsingdata.metal.data;
 
-import static org.junit.Assert.assertEquals;
-
 import static io.parsingdata.metal.data.Slice.createFromSource;
 import static io.parsingdata.metal.expression.value.ConstantFactory.createFromBytes;
 import static io.parsingdata.metal.util.EncodingFactory.enc;
+import static org.junit.jupiter.api.Assertions.assertEquals;
 
 import java.math.BigInteger;
-import java.util.Arrays;
 import java.util.Collection;
-
-import org.junit.Test;
-import org.junit.runner.RunWith;
-import org.junit.runners.Parameterized;
-import org.junit.runners.Parameterized.Parameter;
+import java.util.List;
 
 import io.parsingdata.metal.expression.value.CoreValue;
 import io.parsingdata.metal.expression.value.Value;
+import org.junit.jupiter.api.BeforeAll;
+import org.junit.jupiter.params.ParameterizedTest;
+import org.junit.jupiter.params.provider.MethodSource;
 
-@RunWith(Parameterized.class)
 public class ConcatenatedValueSourceTest {
 
-    @Parameter public String description;
-    @Parameter(1) public int offset;
-    @Parameter(2) public int length;
+    private static ConcatenatedValueSource cvs;
 
-    public static final ConcatenatedValueSource cvs = ConcatenatedValueSource.create(createValues()).get();
-
-    private static ImmutableList<Value> createValues() {
+    @BeforeAll
+    public static void setup() {
         final byte[] twoSliceSource = new byte[] { -1, -1, 5, 6, 7, 8, 9, -1, -1, 10, 11, 12, 13, 14, -1, -1 };
-        return ImmutableList
-            .create(createFromBytes(new byte[] { 0, 1, 2, 3, 4 }, enc()))
+        final ImmutableList<Value> list = ImmutableList
+            .create(createFromBytes(new byte[]{0, 1, 2, 3, 4}, enc()))
             .add(new CoreValue(createFromSource(new ConstantSource(twoSliceSource), BigInteger.valueOf(2), BigInteger.valueOf(5)).get(), enc()))
             .add(new CoreValue(createFromSource(new ConstantSource(twoSliceSource), BigInteger.valueOf(9), BigInteger.valueOf(5)).get(), enc()))
-            .add(createFromBytes(new byte[] { 15, 16, 17, 18, 19 }, enc()))
-            .add(createFromBytes(new byte[] { 20, 21, 22, 23, 24 }, enc()));
+            .add(createFromBytes(new byte[]{15, 16, 17, 18, 19}, enc()))
+            .add(createFromBytes(new byte[]{20, 21, 22, 23, 24}, enc()));
+
+        cvs = ConcatenatedValueSource.create(list).orElseThrow();
     }
 
-    @Parameterized.Parameters(name="{0}")
     public static Collection<Object[]> data() {
-        return Arrays.asList(new Object[][] {
+        return List.of(new Object[][] {
             { "full", 0, 25 },                // [XXXXX][XXXXX][XXXXX][XXXXX][XXXXX]
             { "none", 0, 0 },                 // [.....][.....][.....][.....][.....]
             { "full(0)", 0, 5 },              // [XXXXX][.....][.....][.....][.....]
@@ -84,8 +78,9 @@ public class ConcatenatedValueSourceTest {
         });
     }
 
-    @Test
-    public void checkData() {
+    @ParameterizedTest(name="{0}")
+    @MethodSource("data")
+    public void checkData(final String description, final int offset, final int length) {
         byte[] data = cvs.getData(BigInteger.valueOf(offset), BigInteger.valueOf(length));
         assertEquals(length, data.length);
         for (int i = 0; i < length; i++) {
