@@ -34,10 +34,8 @@ import static io.parsingdata.metal.util.EncodingFactory.enc;
 import static io.parsingdata.metal.util.EncodingFactory.signed;
 import static io.parsingdata.metal.util.ParseStateFactory.stream;
 
-import java.util.Arrays;
 import java.util.Collection;
-
-import org.junit.runners.Parameterized.Parameters;
+import java.util.List;
 
 import io.parsingdata.metal.expression.value.ValueExpression;
 import io.parsingdata.metal.util.ParameterizedParse;
@@ -46,9 +44,9 @@ public class ParameterizedUntilTest extends ParameterizedParse {
 
     private static final Token ABC = def("abc", 3, eq(con("abc")));
 
-    @Parameters(name = "{0} ({4})")
-    public static Collection<Object[]> data() {
-        return Arrays.asList(new Object[][] {
+    @Override
+    public Collection<Object[]> data() {
+        return List.of(new Object[][] {
             { "[a,b,c,a,b,c] i=0,s=1,m=6 ab",      untilToken(0, 1, 6, con('c'), con("ab"), ABC), stream("abcabc", US_ASCII), enc(), true },
             { "[a,b,c,a,b,c] i=3,s=1,m=6 abcab",   untilToken(3, 1, 6, con('c'), con("abcab")),   stream("abcabc", US_ASCII), enc(), true },
             { "[a,b,c,a,b,c] i=0,s=2,m=6 ab",      untilToken(0, 2, 6, con('c'), con("ab"), ABC), stream("abcabc", US_ASCII), enc(), true },
